Fix dashboard rounded select on iOS

--- a/client/wfnews-war/src/main/angular/src/app/components/dashboard-component/widgets/fire-cause-widget/fire-cause-widget.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/dashboard-component/widgets/fire-cause-widget/fire-cause-widget.component.scss
@@ -447,6 +447,9 @@
 
 .rounded-select {
   border-radius: 20px !important;
+  border: 1px solid #c4c4c4;
+  color: #242424;
+
   height: 36px;
   padding-left: 10px;
 
